--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
   background-color: #1e1e2e;
-  margin: 0;
-  padding: 2px;
+  padding: 15px;
 }
 #wrap {
   width: 600px;
@@ -10,9 +9,16 @@ body {
   overflow: hidden;
   padding: 15px;
   box-shadow: 0 0 10px #313244;
-  
 }
 h1 {
+  text-align: center;
+  color: #c6d0f5;	
+}
+h2 {
+  text-align: center;
+  color: #c6d0f5;	
+}
+h3 {
   padding: 1%;
   text-align: center;
   color: #c6d0f5;	
@@ -27,7 +33,6 @@ a:visited {
     color: #cba6f7;
     text-decoration: none;
 }
-
 a:hover,
 a:active {
     color: #f2cdcd;
