--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ overflow: hidden;
 padding: 15px;
 box-shadow: 0 0 10px #313244;  
 }
-.ban {
+.foot {
 border-radius: 25px;
 width: 100%;
 margin: auto;
