--- a/style.css
+++ b/style.css
@@ -1,66 +1,106 @@
-* {box-sizing: border-box}
-body, html {
-background-color: #1e1e2e;
-height: 60%;
-margin: 7%;
-padding: 0;
-font-family: Arial;
-display: flex;
-justify-content: center;
-align-items: center;
-text-align: center;
+* {
+  box-sizing: border-box;
 }
+
+body,
+html {
+  background-color: #1e1e2e;
+  height: 60%;
+  margin: 7%;
+  padding: 0;
+  font-family: Arial;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
 .container {
-width: 800px;
-padding: 15px;
+  width: 800px;
+  padding: 15px;
 }
+
 h1 {
-border-radius: 25px 25px 0px 0px;
-width: 100%;
-margin: auto;
-background: #11111b;
-overflow: hidden;
-padding: 15px;
-box-shadow: 0 0 10px #313244;  
+  border-radius: 25px 25px 0px 0px;
+  width: 100%;
+  margin: auto;
+  background: #11111b;
+  overflow: hidden;
+  padding: 15px;
+  box-shadow: 0 0 10px #313244;
 }
+hr{
+  color: #cba6f7;
+}
+h5 {
+  padding: 8px;
+  font-size: 25px;
+  border-bottom: 2px solid;
+}
+
 .foot {
-border-radius: 25px;
-width: 100%;
-margin: auto;
-background: #11111b;
-overflow: hidden;
-padding: 15px;
-box-shadow: 0 0 10px #313244;
+  border-radius: 25px;
+  width: 100%;
+  margin: auto;
+  background: #11111b;
+  overflow: hidden;
+  padding: 15px;
+  box-shadow: 0 0 10px #313244;
 }
+
 /* Style tab links */
 .tablink {
-background-color: #1e1e2e;
-color: #cba6f7;
-float: left;
-border: none;
-outline: none;
-cursor: pointer;
-padding: 14px 16px;
-font-size: 17px;
-width: 25%;
+  background-color: #1e1e2e;
+  color: #cba6f7;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  font-size: 17px;
+  width: 25%;
 }
+
 .tablink:hover {
-background-color: #11111b;
+  background-color: #11111b;
 }
+
 /* Style the tab content (and add height:100% for full page content) */
 .tabcontent {
-color: #cba6f7;
-display: none;
-padding: 100px 20px;
-height: 100%;
-box-shadow: 0 0 10px #313244;
-border-radius: 0px 0px 25px 25px;
+  color: #cba6f7;
+  display: none;
+  padding: 100px 20px;
+  height: 100%;
+  box-shadow: 0 0 10px #313244;
+  border-radius: 0px 0px 25px 25px;
 }
+
 .button {
-border-radius: 25px;
-color: #1e1e2e;
+  border-radius: 25px;
+  color: #1e1e2e;
 }
-#Home {background-color: #11111b;}
-#Links {background-color: #11111b;}
-#Help {background-color: #11111b;}
-#Contact {background-color: #11111b;}
+
+table {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+tr {
+  border-bottom: 1px solid;
+}
+
+#Home {
+  background-color: #11111b;
+}
+
+#Links {
+  background-color: #11111b;
+}
+
+#Help {
+  background-color: #11111b;
+}
+
+#Contact {
+  background-color: #11111b;
+}
