--- a/style.css
+++ b/style.css
@@ -5,9 +5,7 @@
 body,
 html {
   background-color: #1e1e2e;
-  height: 60%;
-  margin: 7%;
-  padding: 0;
+  padding: 10px;
   font-family: Arial;
   display: flex;
   justify-content: center;
@@ -29,9 +27,11 @@ h1 {
   padding: 15px;
   box-shadow: 0 0 10px #313244;
 }
+
 hr{
   color: #cba6f7;
 }
+
 h5 {
   padding: 8px;
   font-size: 25px;
